overflow hidden on card is hiding dropdowns this applies fix to events where it is needed

--- a/src/components/card/theme.css
+++ b/src/components/card/theme.css
@@ -10,7 +10,6 @@
   box-shadow: 0 3px 6px 0 var(--sd-shadowColor);
   border-radius: 4px;
   background-color: rgb(255, 255, 255);
-  overflow: hidden;
 }
 
 .cardHeader {
